--- a/src/main/resources/view/AdminLoginForm.fxml
+++ b/src/main/resources/view/AdminLoginForm.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -12,22 +13,22 @@
    <children>
       <AnchorPane layoutX="196.0" layoutY="137.0" prefHeight="407.0" prefWidth="420.0" style="-fx-background-color: white; -fx-background-radius: 20;">
          <children>
-            <Label alignment="CENTER" layoutX="65.0" layoutY="25.0" prefHeight="56.0" prefWidth="273.0" text="Admin Login">
+            <Label alignment="CENTER" layoutX="65.0" layoutY="25.0" prefHeight="56.0" prefWidth="273.0" text="Admin Login" textFill="#636e72">
                <font>
                   <Font name="System Bold" size="32.0" />
                </font>
             </Label>
-            <Button fx:id="btnAdminLogin" layoutX="92.0" layoutY="320.0" mnemonicParsing="false" onAction="#btnAdminLoginOnAction" prefHeight="47.0" prefWidth="261.0" style="-fx-background-radius: 10; -fx-background-color: #ffc42a;" text="Let's Started" textFill="WHITE">
+            <Button fx:id="btnAdminLogin" layoutX="92.0" layoutY="320.0" mnemonicParsing="false" onAction="#btnAdminLoginOnAction" prefHeight="47.0" prefWidth="261.0" style="-fx-background-radius: 10; -fx-background-color: #ffc42a;" text="Let's Started" textFill="#273c75">
                <font>
                   <Font size="22.0" />
                </font>
             </Button>
-            <Label layoutX="32.0" layoutY="127.0" prefHeight="52.0" prefWidth="145.0" text="User Name" textFill="#ffc42a">
+            <Label layoutX="32.0" layoutY="127.0" prefHeight="52.0" prefWidth="145.0" text="User Name" textFill="#273c75">
                <font>
                   <Font size="19.0" />
                </font>
             </Label>
-            <Label layoutX="32.0" layoutY="209.0" prefHeight="52.0" prefWidth="145.0" text="Password" textFill="#ffc42a">
+            <Label layoutX="32.0" layoutY="209.0" prefHeight="52.0" prefWidth="145.0" text="Password" textFill="#273c75">
                <font>
                   <Font size="19.0" />
                </font>
@@ -37,11 +38,11 @@
                   <Font size="14.0" />
                </font>
             </TextField>
-            <TextField fx:id="txtFldCashierPassword" layoutX="177.0" layoutY="209.0" prefHeight="52.0" prefWidth="211.0">
+            <PasswordField fx:id="txtFldCashierPassword" layoutX="177.0" layoutY="209.0" prefHeight="52.0" prefWidth="211.0">
                <font>
                   <Font size="14.0" />
                </font>
-            </TextField>
+            </PasswordField>
             <ImageView fx:id="adminLoginBackIcon" fitHeight="52.0" fitWidth="61.0" layoutX="27.0" layoutY="26.0" onMouseClicked="#adminLoginBackIconOnAction" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../asserts/BackIcon.jpeg" />
