--- a/src/main/resources/view/CarsForm.fxml
+++ b/src/main/resources/view/CarsForm.fxml
@@ -14,38 +14,38 @@
    <children>
       <AnchorPane layoutX="28.0" prefHeight="102.0" prefWidth="998.0" style="-fx-background-color: white;">
          <children>
-            <Label alignment="CENTER" layoutX="368.0" layoutY="30.0" prefHeight="43.0" prefWidth="115.0" text="Cars" textFill="#ffc029">
+            <Label alignment="CENTER" layoutX="368.0" layoutY="30.0" prefHeight="43.0" prefWidth="115.0" text="Cars" textFill="#273c75">
                <font>
-                  <Font size="18.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Label>
          </children>
       </AnchorPane>
       <AnchorPane layoutX="28.0" layoutY="119.0" prefHeight="255.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 20;">
          <children>
-            <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="131.0" text="License Plate No">
+            <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="131.0" text="License Plate No" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="50.0" prefHeight="43.0" prefWidth="131.0" text="Type ID">
+            <Label layoutX="14.0" layoutY="50.0" prefHeight="43.0" prefWidth="131.0" text="Type ID" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="100.0" prefHeight="43.0" prefWidth="131.0" text="Model">
+            <Label layoutX="14.0" layoutY="100.0" prefHeight="43.0" prefWidth="131.0" text="Model" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="412.0" layoutY="98.0" prefHeight="43.0" prefWidth="59.0" text="Colour">
+            <Label layoutX="412.0" layoutY="98.0" prefHeight="43.0" prefWidth="59.0" text="Colour" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="196.0" prefHeight="43.0" prefWidth="131.0" text="Availability Status">
+            <Label layoutX="14.0" layoutY="196.0" prefHeight="43.0" prefWidth="131.0" text="Availability Status" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <TextField fx:id="txtFldModel" layoutX="149.0" layoutY="104.0" prefHeight="35.0" prefWidth="196.0">
@@ -68,21 +68,21 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="btnRefresh" layoutX="778.0" layoutY="137.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="      REFRESH" textFill="#ffc029">
+            <Button fx:id="btnRefresh" layoutX="781.0" layoutY="137.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #e84118;" text="      REFRESH" textFill="#e84118">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
             <FontAwesomeIcon fill="#273c75" iconName="SAVE" layoutX="803.0" layoutY="227.0" size="2em" />
-            <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" layoutX="799.0" layoutY="166.0" size="2em" />
-            <Label layoutX="14.0" layoutY="145.0" prefHeight="43.0" prefWidth="131.0" text="Daily Rate">
+            <FontAwesomeIcon fill="#e84118" iconName="REFRESH" layoutX="802.0" layoutY="166.0" size="2em" />
+            <Label layoutX="14.0" layoutY="145.0" prefHeight="43.0" prefWidth="131.0" text="Daily Rate" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="411.0" layoutY="143.0" prefHeight="43.0" prefWidth="97.0" text="Monthly Rate">
+            <Label layoutX="411.0" layoutY="143.0" prefHeight="43.0" prefWidth="97.0" text="Monthly Rate" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <TextField fx:id="txtFldMonthlyRate" layoutX="518.0" layoutY="148.0" prefHeight="35.0" prefWidth="196.0">
@@ -97,9 +97,9 @@
                   <Font size="14.0" />
                </font>
             </TextField>
-            <Label layoutX="411.0" layoutY="50.0" prefHeight="43.0" prefWidth="97.0" text="Type Name">
+            <Label layoutX="411.0" layoutY="50.0" prefHeight="43.0" prefWidth="97.0" text="Type Name" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <TextField fx:id="txtFldTypeName" layoutX="518.0" layoutY="55.0" prefHeight="35.0" prefWidth="196.0">
