--- a/src/main/resources/view/CashierSignUpForm.fxml
+++ b/src/main/resources/view/CashierSignUpForm.fxml
@@ -13,9 +13,9 @@
    <children>
       <AnchorPane layoutX="33.0" prefHeight="102.0" prefWidth="998.0" style="-fx-background-color: white;">
          <children>
-            <Label alignment="CENTER" layoutX="375.0" layoutY="34.0" prefHeight="34.0" prefWidth="118.0" text="Cashiers" textFill="#ffc029">
+            <Label alignment="CENTER" layoutX="375.0" layoutY="34.0" prefHeight="34.0" prefWidth="118.0" text="Cashiers" textFill="#273c75">
                <font>
-                  <Font size="18.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Label>
          </children>
@@ -32,29 +32,29 @@
       </TableView>
       <AnchorPane layoutX="30.0" layoutY="129.0" prefHeight="255.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 20;">
          <children>
-            <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="115.0" text="User Name">
+            <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="115.0" text="User Name" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="50.0" prefHeight="43.0" prefWidth="115.0" text="Password">
+            <Label layoutX="14.0" layoutY="50.0" prefHeight="43.0" prefWidth="115.0" text="Password" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="100.0" prefHeight="43.0" prefWidth="115.0" text="Name">
+            <Label layoutX="14.0" layoutY="100.0" prefHeight="43.0" prefWidth="115.0" text="Name" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="150.0" prefHeight="43.0" prefWidth="115.0" text="Contact Number">
+            <Label layoutX="14.0" layoutY="150.0" prefHeight="43.0" prefWidth="118.0" text="Contact Number" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="196.0" prefHeight="43.0" prefWidth="115.0" text="Email">
+            <Label layoutX="14.0" layoutY="196.0" prefHeight="43.0" prefWidth="115.0" text="Email" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <TextField fx:id="txtFldPassword" layoutX="149.0" layoutY="56.0" prefHeight="35.0" prefWidth="398.0">
@@ -87,13 +87,13 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="btnRefresh" layoutX="594.0" layoutY="201.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="      REFRESH" textFill="#ffc029">
+            <Button fx:id="btnRefresh" layoutX="594.0" layoutY="201.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #e84118;" text="      REFRESH" textFill="#e84118">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
             <FontAwesomeIcon fill="#273c75" iconName="SAVE" layoutX="807.0" layoutY="229.0" size="2em" />
-            <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" layoutX="615.0" layoutY="230.0" size="2em" />
+            <FontAwesomeIcon fill="#e84118" iconName="REFRESH" layoutX="615.0" layoutY="230.0" size="2em" />
          </children>
       </AnchorPane>
       <TextField fx:id="txtFldSearchHere" layoutX="252.0" layoutY="405.0" onKeyReleased="#txtFldSearchHereOnAction" prefHeight="35.0" prefWidth="500.0" promptText="       Search Here">
