--- a/src/main/resources/view/CustomerForm.fxml
+++ b/src/main/resources/view/CustomerForm.fxml
@@ -15,9 +15,9 @@
    <children>
       <AnchorPane layoutX="28.0" prefHeight="102.0" prefWidth="998.0" style="-fx-background-color: white;">
          <children>
-            <Label alignment="CENTER" layoutX="368.0" layoutY="30.0" prefHeight="43.0" prefWidth="115.0" text="Customers" textFill="#ffc029">
+            <Label alignment="CENTER" layoutX="368.0" layoutY="30.0" prefHeight="43.0" prefWidth="115.0" text="Customers" textFill="#273c75">
                <font>
-                  <Font size="18.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Label>
             <FontAwesomeIcon fill="#636e72" iconName="USER" layoutX="726.0" layoutY="31.0" size="2em" />
@@ -30,27 +30,27 @@
       </AnchorPane>
       <AnchorPane layoutX="28.0" layoutY="119.0" prefHeight="255.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 20;">
          <children>
-            <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="115.0" text="Customer NIC">
+            <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="115.0" text="Customer NIC" textFill="#636e72">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="50.0" prefHeight="43.0" prefWidth="126.0" text="Customer Name">
+            <Label layoutX="14.0" layoutY="50.0" prefHeight="43.0" prefWidth="126.0" text="Customer Name" textFill="#636e72">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="100.0" prefHeight="43.0" prefWidth="115.0" text="Address">
+            <Label layoutX="14.0" layoutY="100.0" prefHeight="43.0" prefWidth="115.0" text="Address" textFill="#636e72">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="150.0" prefHeight="43.0" prefWidth="115.0" text="Email">
+            <Label layoutX="14.0" layoutY="150.0" prefHeight="43.0" prefWidth="115.0" text="Email" textFill="#636e72">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="196.0" prefHeight="43.0" prefWidth="126.0" text="Contact Number">
+            <Label layoutX="14.0" layoutY="196.0" prefHeight="43.0" prefWidth="126.0" text="Contact Number" textFill="#636e72">
                <font>
                   <Font size="15.0" />
                </font>
@@ -85,13 +85,13 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="btnRefresh" layoutX="601.0" layoutY="196.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="      REFRESH" textFill="#ffc029">
+            <Button fx:id="btnRefresh" layoutX="601.0" layoutY="196.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #e84118;" text="      REFRESH" textFill="#e84118">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
             <FontAwesomeIcon fill="#273c75" iconName="SAVE" layoutX="813.0" layoutY="225.0" size="2em" />
-            <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" layoutX="622.0" layoutY="225.0" size="2em" />
+            <FontAwesomeIcon fill="#e84118" iconName="REFRESH" layoutX="622.0" layoutY="225.0" size="2em" />
             <ImageView fitHeight="179.0" fitWidth="224.0" layoutX="675.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../asserts/CustomerForm.jpg" />
