--- a/src/main/resources/view/DriverForm.fxml
+++ b/src/main/resources/view/DriverForm.fxml
@@ -14,9 +14,9 @@
    <children>
       <AnchorPane layoutX="28.0" prefHeight="102.0" prefWidth="998.0" style="-fx-background-color: white;">
          <children>
-            <Label alignment="CENTER" layoutX="368.0" layoutY="30.0" prefHeight="43.0" prefWidth="115.0" text="Drivers" textFill="#ffc029">
+            <Label alignment="CENTER" layoutX="368.0" layoutY="30.0" prefHeight="43.0" prefWidth="115.0" text="Drivers" textFill="#273c75">
                <font>
-                  <Font size="18.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Label>
          </children>
@@ -34,22 +34,22 @@
       </TableView>
       <AnchorPane fx:id="driverFormPane" layoutX="30.0" layoutY="129.0" prefHeight="255.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 10;">
          <children>
-            <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="145.0" text="Driver NIC">
+            <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="145.0" text="Driver NIC" textFill="#636e72">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="50.0" prefHeight="43.0" prefWidth="145.0" text="Driver Name">
+            <Label layoutX="14.0" layoutY="50.0" prefHeight="43.0" prefWidth="145.0" text="Driver Name" textFill="#636e72">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="100.0" prefHeight="43.0" prefWidth="145.0" text="Email">
+            <Label layoutX="14.0" layoutY="100.0" prefHeight="43.0" prefWidth="145.0" text="Email" textFill="#636e72">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="196.0" prefHeight="43.0" prefWidth="145.0" text="Contact Number">
+            <Label layoutX="14.0" layoutY="196.0" prefHeight="43.0" prefWidth="145.0" text="Contact Number" textFill="#636e72">
                <font>
                   <Font size="15.0" />
                </font>
@@ -80,18 +80,18 @@
                </font>
             </Button>
             <FontAwesomeIcon fill="#273c75" iconName="SAVE" layoutX="811.0" layoutY="226.0" size="2em" />
-            <Label layoutX="14.0" layoutY="149.0" prefHeight="43.0" prefWidth="145.0" text="Availability Status">
+            <Label layoutX="14.0" layoutY="149.0" prefHeight="43.0" prefWidth="145.0" text="Availability Status" textFill="#636e72">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
             <ComboBox fx:id="cmbAvailabilityStatus" layoutX="179.0" layoutY="151.0" prefHeight="35.0" prefWidth="203.0" promptText="Select" style="-fx-background-color: white; -fx-border-color: #dcdde1;" />
-            <Button fx:id="btnRefresh" layoutX="785.0" layoutY="137.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="  REFRESH" textFill="#ffc029">
+            <Button fx:id="btnRefresh" layoutX="785.0" layoutY="137.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="35.0" prefWidth="169.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #e84118;" text="  REFRESH" textFill="#e84118">
                <font>
                   <Font size="18.0" />
                </font>
                <graphic>
-                  <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" size="1.5em" />
+                  <FontAwesomeIcon fill="#e84118" iconName="REFRESH" size="1.5em" />
                </graphic>
             </Button>
             <Button fx:id="btnViewDriverAssignment" layoutX="647.0" layoutY="17.0" mnemonicParsing="false" onAction="#btnViewDriverAssignmentOnAction" prefHeight="41.0" prefWidth="316.0" style="-fx-background-color: #dfe6e9; -fx-border-radius: 10; -fx-border-color: #00b894;" text="  VIEW DRIVER ASSIGNMENT" textFill="#00b894">
@@ -102,7 +102,7 @@
                   <FontAwesomeIcon fill="#00b894" iconName="EYE" size="1.5em" />
                </graphic>
             </Button>
-            <Label layoutX="456.0" layoutY="195.0" prefHeight="43.0" prefWidth="95.0" text="Price Per km">
+            <Label layoutX="456.0" layoutY="195.0" prefHeight="43.0" prefWidth="95.0" text="Price Per km" textFill="#636e72">
                <font>
                   <Font size="15.0" />
                </font>
@@ -121,7 +121,7 @@
          </font>
       </TextField>
       <FontAwesomeIcon fx:id="searchIcon" fill="#c3bfbf" iconName="SEARCH" layoutX="266.0" layoutY="428.0" />
-      <Label layoutX="472.0" layoutY="274.0" prefHeight="43.0" prefWidth="145.0" text="License Plate No">
+      <Label layoutX="472.0" layoutY="274.0" prefHeight="43.0" prefWidth="145.0" text="License Plate No" textFill="#636e72">
          <font>
             <Font size="15.0" />
          </font>
