--- a/src/main/resources/view/PaymentsForm.fxml
+++ b/src/main/resources/view/PaymentsForm.fxml
@@ -15,9 +15,9 @@
    <children>
       <AnchorPane layoutX="27.0" layoutY="1.0" prefHeight="102.0" prefWidth="998.0" style="-fx-background-color: white;">
          <children>
-            <Label alignment="CENTER" layoutX="300.0" layoutY="24.0" prefHeight="54.0" prefWidth="176.0" text="Payments" textFill="#ffc029">
+            <Label alignment="CENTER" layoutX="359.0" layoutY="24.0" prefHeight="54.0" prefWidth="176.0" text="Payments" textFill="#273c75">
                <font>
-                  <Font size="18.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Label>
          </children>
@@ -35,19 +35,19 @@
       </TableView>
       <AnchorPane layoutX="25.0" layoutY="129.0" prefHeight="261.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 20;">
          <children>
-            <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="145.0" text="Payment ID">
+            <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="145.0" text="Payment ID" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="100.0" prefHeight="43.0" prefWidth="145.0" text="Payment Method">
+            <Label layoutX="14.0" layoutY="100.0" prefHeight="43.0" prefWidth="145.0" text="Payment Method" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="470.0" layoutY="148.0" prefHeight="43.0" prefWidth="81.0" text="Time">
+            <Label layoutX="470.0" layoutY="148.0" prefHeight="43.0" prefWidth="81.0" text="Time" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <TextField fx:id="txtFldPaymentMethod" layoutX="162.0" layoutY="107.0" prefHeight="35.0" prefWidth="236.0">
@@ -60,22 +60,22 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="btnRefresh" layoutX="476.0" layoutY="207.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="187.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="      REFRESH" textFill="#ffc029">
+            <Button fx:id="btnRefresh" layoutX="476.0" layoutY="207.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="187.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #e84118;" text="      REFRESH" textFill="#e84118">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
             <FontAwesomeIcon fill="#273c75" iconName="SAVE" layoutX="716.0" layoutY="236.0" size="2em" />
-            <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" layoutX="503.0" layoutY="236.0" size="2em" />
-            <Label layoutX="14.0" layoutY="152.0" prefHeight="43.0" prefWidth="145.0" text="Date">
+            <FontAwesomeIcon fill="#e84118" iconName="REFRESH" layoutX="503.0" layoutY="236.0" size="2em" />
+            <Label layoutX="14.0" layoutY="152.0" prefHeight="43.0" prefWidth="145.0" text="Date" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <ComboBox fx:id="cmbReservationID" layoutX="162.0" layoutY="58.0" onAction="#cmbReservationIDOnAction" prefHeight="35.0" prefWidth="167.0" promptText="Select" style="-fx-background-color: white; -fx-border-color: #dcdde1;" />
-            <Label layoutX="14.0" layoutY="54.0" prefHeight="43.0" prefWidth="145.0" text="Reservation ID">
+            <Label layoutX="14.0" layoutY="54.0" prefHeight="43.0" prefWidth="145.0" text="Reservation ID" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <Label fx:id="lblPaymentID" layoutX="162.0" layoutY="6.0" prefHeight="43.0" prefWidth="145.0" text="1">
@@ -83,14 +83,14 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label layoutX="470.0" layoutY="54.0" prefHeight="43.0" prefWidth="81.0" text="Bill ID">
+            <Label layoutX="470.0" layoutY="54.0" prefHeight="43.0" prefWidth="81.0" text="Bill ID" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="470.0" layoutY="100.0" prefHeight="43.0" prefWidth="145.0" text="Amount">
+            <Label layoutX="470.0" layoutY="100.0" prefHeight="43.0" prefWidth="145.0" text="Amount" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <TextField fx:id="txtFldAmount" layoutX="615.0" layoutY="104.0" prefHeight="35.0" prefWidth="236.0">
