--- a/src/main/resources/view/RepairsForm.fxml
+++ b/src/main/resources/view/RepairsForm.fxml
@@ -15,9 +15,9 @@
    <children>
       <AnchorPane layoutX="32.0" prefHeight="102.0" prefWidth="998.0" style="-fx-background-color: white;">
          <children>
-            <Label alignment="CENTER" layoutX="378.0" layoutY="33.0" prefHeight="36.0" prefWidth="103.0" text="Repairs" textFill="#ffc029">
+            <Label alignment="CENTER" layoutX="378.0" layoutY="33.0" prefHeight="36.0" prefWidth="103.0" text="Repairs" textFill="#273c75">
                <font>
-                  <Font size="18.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Label>
          </children>
@@ -34,14 +34,14 @@
       </TableView>
       <AnchorPane layoutX="27.0" layoutY="119.0" prefHeight="261.0" prefWidth="978.0" style="-fx-background-color: white; -fx-background-radius: 20;">
          <children>
-            <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="145.0" text="Repair ID">
+            <Label layoutX="14.0" layoutY="4.0" prefHeight="43.0" prefWidth="145.0" text="Repair ID" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="100.0" prefHeight="43.0" prefWidth="145.0" text="Description">
+            <Label layoutX="14.0" layoutY="100.0" prefHeight="43.0" prefWidth="145.0" text="Description" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <TextField fx:id="txtFldDescription" layoutX="162.0" layoutY="107.0" prefHeight="35.0" prefWidth="788.0">
@@ -54,22 +54,22 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="btnRefresh" layoutX="497.0" layoutY="207.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="187.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #ffc029;" text="      REFRESH" textFill="#ffc029">
+            <Button fx:id="btnRefresh" layoutX="497.0" layoutY="207.0" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="40.0" prefWidth="187.0" style="-fx-background-color: #dff9fb; -fx-border-radius: 10; -fx-border-color: #e84118;" text="      REFRESH" textFill="#e84118">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
             <FontAwesomeIcon fill="#273c75" iconName="SAVE" layoutX="746.0" layoutY="236.0" size="2em" />
-            <FontAwesomeIcon fill="#ffc029" iconName="REFRESH" layoutX="523.0" layoutY="236.0" size="2em" />
-            <Label layoutX="14.0" layoutY="152.0" prefHeight="43.0" prefWidth="145.0" text="Date">
+            <FontAwesomeIcon fill="#e84118" iconName="REFRESH" layoutX="523.0" layoutY="236.0" size="2em" />
+            <Label layoutX="14.0" layoutY="152.0" prefHeight="43.0" prefWidth="145.0" text="Date" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <ComboBox fx:id="cmbLicensePlateNo" layoutX="162.0" layoutY="58.0" onAction="#cmbLicensePlateNoOnAction" prefHeight="35.0" prefWidth="167.0" promptText="Select" style="-fx-background-color: white; -fx-border-color: #dcdde1;" />
-            <Label layoutX="14.0" layoutY="54.0" prefHeight="43.0" prefWidth="145.0" text="License Plate No">
+            <Label layoutX="14.0" layoutY="54.0" prefHeight="43.0" prefWidth="145.0" text="License Plate No" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <Label fx:id="lblRepairID" layoutX="162.0" layoutY="6.0" prefHeight="43.0" prefWidth="145.0" text="1">
@@ -77,9 +77,9 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="200.0" prefHeight="43.0" prefWidth="145.0" text="Cost">
+            <Label layoutX="14.0" layoutY="200.0" prefHeight="43.0" prefWidth="145.0" text="Cost" textFill="#636e72">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <TextField fx:id="txtFldCost" layoutX="162.0" layoutY="204.0" prefHeight="35.0" prefWidth="236.0">
