--- a/src/main/resources/reports/MonthReport.jrxml
+++ b/src/main/resources/reports/MonthReport.jrxml
@@ -15,8 +15,7 @@ FROM customer cu
          LEFT JOIN reservation_detail rd ON r.reservation_id = rd.reservation_id
          LEFT JOIN payment p ON r.reservation_id = p.reservation_id
          LEFT JOIN cashier cs ON r.cashier_username = cs.username
-WHERE MONTH(pick_up_date) = MONTH(CURRENT_DATE());
-]]></query>
+WHERE MONTH(pick_up_date) = MONTH(CURRENT_DATE())]]></query>
 	<field name="customer_name" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.name" value="name"/>
 		<property name="com.jaspersoft.studio.field.label" value="customer_name"/>
@@ -59,7 +58,7 @@ WHERE MONTH(pick_up_date) = MONTH(CURRENT_DATE());
 		</element>
 	</title>
 	<pageHeader height="35" splitType="Stretch">
-		<element kind="textField" uuid="82d3c1c9-c8c2-4f3c-9704-fe21f7346743" x="420" y="2" width="100" height="30" fontSize="12.0" hTextAlign="Right">
+		<element kind="textField" uuid="82d3c1c9-c8c2-4f3c-9704-fe21f7346743" x="451" y="2" width="100" height="30" fontSize="12.0" hTextAlign="Right">
 			<expression><![CDATA[$P{p_Date}]]></expression>
 		</element>
 	</pageHeader>
