--- a/src/main/resources/view/CashierDashboardForm.fxml
+++ b/src/main/resources/view/CashierDashboardForm.fxml
@@ -69,12 +69,12 @@
       </AnchorPane>
       <AnchorPane layoutX="732.0" layoutY="606.0" prefHeight="155.0" prefWidth="274.0" style="-fx-background-color: white; -fx-background-radius: 20;">
          <children>
-            <Label fx:id="lblTime" alignment="CENTER" layoutX="14.0" layoutY="26.0" prefHeight="53.0" prefWidth="248.0" textFill="#ffc029">
+            <Label fx:id="lblTime" alignment="CENTER" layoutX="14.0" layoutY="26.0" prefHeight="53.0" prefWidth="248.0" textFill="#273c75">
                <font>
                   <Font size="22.0" />
                </font>
             </Label>
-            <Label fx:id="lblDate" alignment="CENTER" layoutX="14.0" layoutY="83.0" prefHeight="53.0" prefWidth="248.0" textFill="#ffc029">
+            <Label fx:id="lblDate" alignment="CENTER" layoutX="14.0" layoutY="83.0" prefHeight="53.0" prefWidth="248.0" textFill="#273c75">
                <font>
                   <Font size="18.0" />
                </font>
