--- a/src/main/resources/view/ReservationsForm.fxml
+++ b/src/main/resources/view/ReservationsForm.fxml
@@ -13,15 +13,7 @@
 
 <AnchorPane fx:id="reservationsContent" prefHeight="800.0" prefWidth="1026.0" style="-fx-background-color: #dfe4ea;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rdfcarrentals.controller.ReservationsFormController">
    <children>
-      <AnchorPane layoutX="32.0" layoutY="1.0" prefHeight="102.0" prefWidth="998.0" style="-fx-background-color: white;">
-         <children>
-            <Label alignment="CENTER" layoutX="352.0" layoutY="24.0" prefHeight="54.0" prefWidth="176.0" text="Reservations" textFill="#273c75">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
-         </children>
-      </AnchorPane>
+      <AnchorPane fx:id="reservationHeadingPane" layoutX="32.0" layoutY="1.0" prefHeight="102.0" prefWidth="998.0" style="-fx-background-color: white;" />
       <TableView fx:id="tblReservations" layoutX="29.0" layoutY="458.0" onMouseClicked="#tblReservationsOnClicked" prefHeight="324.0" prefWidth="978.0" stylesheets="@../asserts/TableStyle.css">
          <columns>
             <TableColumn fx:id="colReservationID" prefWidth="97.0" text="Reservation&#10;        ID" />
@@ -127,11 +119,5 @@
          </font>
       </TextField>
       <FontAwesomeIcon fx:id="searchIcon" fill="#c3bfbf" iconName="SEARCH" layoutX="275.0" layoutY="430.0" />
-      <FontAwesomeIcon fill="#636e72" iconName="USER" layoutX="758.0" layoutY="32.0" size="2em" />
-      <Label fx:id="lblHeadingUserName" layoutX="782.0" layoutY="5.0" prefHeight="35.0" prefWidth="241.0" textFill="#636e72">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
    </children>
 </AnchorPane>
