--- a/src/main/resources/view/CashierDashboardForm.fxml
+++ b/src/main/resources/view/CashierDashboardForm.fxml
@@ -81,8 +81,8 @@
             </Label>
          </children>
       </AnchorPane>
-      <FontAwesomeIcon fill="#636e72" iconName="USER" layoutX="754.0" layoutY="32.0" size="2em" />
-      <Label fx:id="lblHeadingUserName" layoutX="778.0" layoutY="5.0" prefHeight="35.0" prefWidth="241.0" textFill="#636e72">
+      <FontAwesomeIcon fill="#636e72" iconName="USER" layoutX="790.0" layoutY="32.0" size="2em" />
+      <Label fx:id="lblHeadingUserName" layoutX="820.0" layoutY="9.0" prefHeight="35.0" prefWidth="198.0" text="Hansana Sandamini" textFill="#636e72">
          <font>
             <Font size="15.0" />
          </font>
