--- a/src/main/resources/view/RepairsForm.fxml
+++ b/src/main/resources/view/RepairsForm.fxml
@@ -96,8 +96,8 @@
          </font>
       </TextField>
       <FontAwesomeIcon fx:id="searchIcon" fill="#c3bfbf" iconName="SEARCH" layoutX="285.0" layoutY="430.0" />
-      <FontAwesomeIcon fill="#636e72" iconName="USER" layoutX="756.0" layoutY="31.0" size="2em" />
-      <Label fx:id="lblHeadingUserName" layoutX="780.0" layoutY="4.0" prefHeight="35.0" prefWidth="241.0" textFill="#636e72">
+      <FontAwesomeIcon fill="#636e72" iconName="USER" layoutX="793.0" layoutY="31.0" size="2em" />
+      <Label fx:id="lblHeadingUserName" layoutX="826.0" layoutY="6.0" prefHeight="35.0" prefWidth="198.0" text="Hansana Sandamini" textFill="#636e72">
          <font>
             <Font size="15.0" />
          </font>
